Updated Danish translation
git-svn-id: https://fslint.googlecode.com/svn/trunk@74 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,6 +1,7 @@
 2.21 dd/mm/yy
 	* Translations:
 		* Added: Spanish.
+		* Updated: Danish.
 	* Improvements:
 		* Ensure all numbers are output appropriate to locale.
 		* Add an indenting checker/fixer to the "redundant whitespace"
