Fix up the previous rename functionality a little.   Add an F2 shortcut key   Add translations (from gthumb) for "_Rename..."   Allow renaming to displayable UTF8 (if different from existing path)
Add a "Copy to clipboard" function for a selected path.
Similar functionality to "rename".


git-svn-id: https://fslint.googlecode.com/svn/trunk@76 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -13,8 +13,11 @@
 		  only parts of the GUI will be responsive.
 		* Simplify the default output from the findup CLI tool, to make
 		  it easier to pipe. Use the --sizes option to get old format.
-		* Add a rename option for files. To activate:
-		  Select a file in a list, right click and select Rename...
+		* Add a "rename" function for paths. To activate: Select a path
+		  in a list and hit F2 or right click and select Rename...
+		* Add a "copy path to clipboard" function for paths.
+		  To activate: Select a path in a list, and hit Ctrl-C or
+		  right click and select Copy.
 	* Fixes:
 		* Change duplicate file merging algorithm to be more robust in
 		  rare error conditions, to eliminate any chance of data loss.
