--- a/doc/NEWS
+++ b/doc/NEWS
@@ -18,6 +18,8 @@
 		* Add a "copy path to clipboard" function for paths.
 		  To activate: Select a path in a list, and hit Ctrl-C or
 		  right click and select Copy.
+		* Support a G_FILENAME_ENCODING which is different to the
+		  default character encoding.
 	* Fixes:
 		* Change duplicate file merging algorithm to be more robust in
 		  rare error conditions, to eliminate any chance of data loss.
