When searching for empty directories make the gui handle paths containing spaces and control characters.
git-svn-id: https://fslint.googlecode.com/svn/trunk@95 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,4 +1,7 @@
 2.23 dd/mm/yy
+	* Fixes:
+		* Make the gui handle paths with spaces for empty directories,
+		  and spaces at the end of names of duplicate files.
 
 2.22 28/06/07
 	* Translations:
