Remove brace expansion from debian/rules to allow package to build on debian systems where dash is the default shell. This issue was noticed when the sync of fslint-2.22-2 to ubuntu gutsy failed.
git-svn-id: https://fslint.googlecode.com/svn/trunk@96 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -2,6 +2,8 @@
 	* Fixes:
 		* Make the gui handle paths with spaces for empty directories,
 		  and spaces at the end of names of duplicate files.
+		* Remove brace expansion from debian/rules to allow package
+		  to build on debian systems where dash is the default shell.
 
 2.22 28/06/07
 	* Translations:
