Updated translations from launcpad. * Added: Italian, Slovak, Hewbrew. * Updated: Chinese (simplified).
Cool Hewbrew is right to left.



git-svn-id: https://fslint.googlecode.com/svn/trunk@97 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,4 +1,7 @@
 2.23 dd/mm/yy
+	* Translations:
+		* Added: Italian, Slovak, Hewbrew.
+		* Updated: Chinese (simplified).
 	* Fixes:
 		* Make the gui handle paths with spaces for empty directories,
 		  and spaces at the end of names of duplicate files.
