Translation updates for Hewbrew, Vietnamese, Chinese (Simplified), French, Italian.
git-svn-id: https://fslint.googlecode.com/svn/trunk@98 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,9 +1,9 @@
 2.23 dd/mm/yy
 	* Translations:
 		* Added: Italian, Slovak, Hewbrew.
-		* Updated: Chinese (simplified).
+		* Updated: Chinese (simplified), French, Vietnamese.
 	* Fixes:
-		* Make the gui handle paths with spaces for empty directories,
+		* Make the GUI handle paths with spaces in names of empty dirs,
 		  and spaces at the end of names of duplicate files.
 		* Remove brace expansion from debian/rules to allow package
 		  to build on debian systems where dash is the default shell.
