--- a/po/vi.po
+++ b/po/vi.po
@@ -1,18 +1,20 @@
-# Vietnamese Translation for fslint-2.03.
-# Copyright (C) 2005 Free Software Foundation, Inc.
-# Clytie Siddall <clytie@riverland.net.au>, 2005.
+# Vietnamese Translation for FSLint.
+# Copyright © 2007 Free Software Foundation, Inc.
+# Clytie Siddall <clytie@riverland.net.au>, 2005-2007.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: fslint 2.03\n"
+"Project-Id-Version: fslint 2.22\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-06-27 14:29+0100\n"
-"PO-Revision-Date: 2005-01-19 18:25+0930\n"
+"PO-Revision-Date: 2007-08-08 14:34+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
-"Language-Team: Vietnamese <gnomevi-list@lists.sourceforge.net> \n"
+"Language-Team: Vietnamese <vi-VN@googlegroups.com> \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: LocFactoryEditor 1.7b1\n"
 
 #: ../fslint.glade:8
 msgid "FSlint"
@@ -20,41 +22,39 @@ msgstr "FSlint"
 
 #: ../fslint.glade:78
 msgid "_Rename..."
-msgstr "Đổ_i tên..."
+msgstr "Tha_y tên..."
 
 #: ../fslint.glade:101
 msgid "Select using wildcard"
-msgstr ""
+msgstr "Chọn bằng ký tự đại diện"
 
 #: ../fslint.glade:110
 msgid "Unselect using wildcard"
-msgstr ""
+msgstr "Bỏ chọn bằng ký tự đại diện"
 
 #: ../fslint.glade:119
 msgid "within groups"
-msgstr "nhóm"
+msgstr "bên trong nhóm"
 
 #: ../fslint.glade:128
 msgid "Select all but first"
-msgstr ""
+msgstr "Chọn tất cả trừ cái thứ nhất"
 
 #: ../fslint.glade:137
 msgid "Select all but newest"
-msgstr ""
+msgstr "Chọn tất cả trừ cái mới nhất"
 
 #: ../fslint.glade:146
 msgid "Select all but oldest"
-msgstr ""
+msgstr "Chọn tất cả trừ cái cũ nhất"
 
 #: ../fslint.glade:159
-#, fuzzy
 msgid "Toggle selection"
-msgstr "điều chọn"
+msgstr "Bật/tắt chọn"
 
 #: ../fslint.glade:168
-#, fuzzy
 msgid "Unselect all"
-msgstr "Chọn đường dẫn"
+msgstr "Bỏ chọn tất cả"
 
 #: ../fslint.glade:285 ../fslint.glade:538
 msgid "Add"
@@ -70,7 +70,7 @@ msgstr "Thư mục để tìm kiếm"
 
 #: ../fslint.glade:433
 msgid "recurse?"
-msgstr "đệ qui?"
+msgstr "đệ qui ?"
 
 #: ../fslint.glade:457
 msgid "Search path"
@@ -78,7 +78,7 @@ msgstr "Dường dẫn tìm kiếm"
 
 #: ../fslint.glade:669
 msgid "Paths to exclude"
-msgstr "Đường dẫn để loại trừ"
+msgstr "Đường dẫn cần loại trừ"
 
 #: ../fslint.glade:704
 msgid "Extra find parameters"
@@ -86,7 +86,7 @@ msgstr "Tham số tìm thêm nữa"
 
 #: ../fslint.glade:729
 msgid "extra find filtering parameters"
-msgstr "tham số lọc việc tìm thêm nữa"
+msgstr "tham số lọc tìm thêm nữa"
 
 #: ../fslint.glade:762
 msgid "Advanced search parameters"
@@ -121,15 +121,15 @@ msgstr "Cỡ"
 
 #: ../fslint.glade:1092
 msgid "Installed packages"
-msgstr ""
+msgstr "Gói đã cài đặt"
 
 #: ../fslint.glade:1133
 msgid "Sensitivity="
-msgstr "Độ nhạy"
+msgstr "Độ nhạy="
 
 #: ../fslint.glade:1177
 msgid "invalid UTF8 mode?"
-msgstr ""
+msgstr "chế độ UTF-8 không hợp lệ ?"
 
 #: ../fslint.glade:1284
 msgid "Bad names"
@@ -137,7 +137,7 @@ msgstr "Tên sai"
 
 #: ../fslint.glade:1319
 msgid "Search ("
-msgstr "Tìm kiếm ("
+msgstr "Tìm kiếm qua ("
 
 #: ../fslint.glade:1345
 msgid "$PATH"
@@ -145,11 +145,11 @@ msgstr "$PATH"
 
 #: ../fslint.glade:1364
 msgid ") for"
-msgstr ") có"
+msgstr ") tìm"
 
 #: ../fslint.glade:1411 ../fslint-gui:869
 msgid "Conflicting files"
-msgstr "Tập tin không khớp"
+msgstr "Tập tin xung đột"
 
 #: ../fslint.glade:1419 ../fslint.glade:1482 ../fslint-gui:867
 #: ../fslint-gui:876
@@ -158,27 +158,27 @@ msgstr "Bí danh"
 
 #: ../fslint.glade:1458 ../fslint-gui:882
 msgid "Case conflicts"
-msgstr "Hoa/thường không khớp"
+msgstr "Chữ hoa/thường xung đột"
 
 #: ../fslint.glade:1466 ../fslint-gui:878
 msgid "Same names"
-msgstr "Cùng một tên"
+msgstr "Cùng tên"
 
 #: ../fslint.glade:1474 ../fslint-gui:880
 msgid "Same names(ignore case)"
-msgstr "Cùng một tên (lời hoa/thường đi)"
+msgstr "Cùng tên (bỏ qua chữ hoa/thường)"
 
 #: ../fslint.glade:1612
 msgid "Name clashes"
-msgstr "Tên không khớp"
+msgstr "Tên xung đột"
 
 #: ../fslint.glade:1647
 msgid "More restrictive search for core files"
-msgstr "Việc tìm kiếm hạn chế hơn có tập tin lõi"
+msgstr "Tìm kiếm hạn chế hơn cho các tập tin lõi"
 
 #: ../fslint.glade:1649
 msgid "core file mode?"
-msgstr "chế độ tập tin lõi?"
+msgstr "chế độ tập tin lõi ?"
 
 #: ../fslint.glade:1673
 msgid "days"
@@ -186,7 +186,7 @@ msgstr "ngày"
 
 #: ../fslint.glade:1693
 msgid "minimum age"
-msgstr "cũ tối thiểu"
+msgstr "hạn dùng tối thiểu"
 
 #: ../fslint.glade:1843
 msgid "Temp files"
@@ -198,16 +198,15 @@ msgstr "Không hướng về gì"
 
 #: ../fslint.glade:1897
 msgid "Absolute links to paths within or below the link's directory"
-msgstr ""
-"Liên kết tuyệt đối\t đến dường dẫn trong hay dưới thư mục của liên kết ấy"
+msgstr "Liên kết tuyệt đối đến dường dẫn trong hay dưới thư mục của liên kết"
 
 #: ../fslint.glade:1899
 msgid "Suspect"
-msgstr "Đáng ngờ"
+msgstr "Nghi"
 
 #: ../fslint.glade:1919
 msgid "Relative"
-msgstr "Liên quan"
+msgstr "Tương đối"
 
 #: ../fslint.glade:1939
 msgid "Absolute"
@@ -231,15 +230,15 @@ msgstr "Liên kết tượng trưng sai"
 
 #: ../fslint.glade:2164
 msgid "UID"
-msgstr "Dấu hiệu nhận diện độc nhất"
+msgstr "UID"
 
 #: ../fslint.glade:2183
 msgid "GID"
-msgstr "Dấu hiệu nhận diện nhớm"
+msgstr "GID"
 
 #: ../fslint.glade:2256
 msgid "Bad IDs"
-msgstr "Dấu hiệu nhận điện sai"
+msgstr "ID sai"
 
 #: ../fslint.glade:2364 ../fslint-gui:500
 msgid "Empty directories"
@@ -247,7 +246,7 @@ msgstr "Thư mục trống"
 
 #: ../fslint.glade:2394
 msgid "Search $PATH"
-msgstr "Tìm kiếm $PATH"
+msgstr "Tìm kiếm qua $PATH"
 
 #: ../fslint.glade:2523
 msgid "Non stripped binaries"
@@ -255,15 +254,15 @@ msgstr "Tập tin nhị phân có bảng ký tự"
 
 #: ../fslint.glade:2559
 msgid "whitespace at end of line"
-msgstr ""
+msgstr "khoảng trắng ở kết thúc dòng"
 
 #: ../fslint.glade:2584
 msgid "bad indenting for indent width"
-msgstr ""
+msgstr "sai thụt lề cho độ rộng thụt lề"
 
 #: ../fslint.glade:2746
 msgid "Redundant whitespace"
-msgstr "Dấu cách thừa"
+msgstr "Khoảng trắng thừa"
 
 #: ../fslint.glade:2832
 msgid "Find"
@@ -271,17 +270,15 @@ msgstr "Tìm"
 
 #: ../fslint.glade:2907
 msgid "Stop"
-msgstr "Ngừng"
+msgstr "Dừng"
 
 #: ../fslint.glade:2995
-#, fuzzy
 msgid "Select"
-msgstr "đã chọn"
+msgstr "Chọn"
 
 #: ../fslint.glade:3026
-#, fuzzy
 msgid "Save (selected) list to file"
-msgstr "ghi danh sách vào tập tin"
+msgstr "Lưu danh sách (đã chọn) vào tập tin"
 
 #: ../fslint.glade:3071
 msgid "Save"
@@ -293,14 +290,15 @@ msgstr "đã chọn"
 
 #: ../fslint.glade:3147
 msgid "Delete"
-msgstr "Xóa bỏ"
+msgstr "Xóa"
 
 #: ../fslint.glade:3191
-#, fuzzy
 msgid ""
 "All (except selected) using hardlinks\n"
 "(or symlinks if on a different filesystem)"
-msgstr "Tất cả (trừ đã chọn) bằng liên kết cứng"
+msgstr ""
+"Tất cả (trừ cái đã chọn) bằng liên kết cứng\n"
+"(hay liên kết mềm nếu trên hệ thống tập tin khác)"
 
 #: ../fslint.glade:3237
 msgid "Merge"
@@ -321,7 +319,7 @@ msgstr "Cách sử dụng: %s [TÙY CHỌN] [ĐƯỜNG DẪN]"
 
 #: ../fslint-gui:169
 msgid "display version"
-msgstr "hiển thị phiên bản nào"
+msgstr "hiển thị phiên bản"
 
 #: ../fslint-gui:170
 msgid "display help"
@@ -330,7 +328,7 @@ msgstr "hiển thị trợ giúp"
 #: ../fslint-gui:358
 #, python-format
 msgid "%(percent)s of %(disk)s is used leaving %(size)sB available"
-msgstr ""
+msgstr "%(percent)s đĩa %(disk)s được chiếm, còn có rảnh %(size)sB"
 
 #: ../fslint-gui:454
 msgid "Do you want to overwrite?\n"
@@ -338,79 +336,77 @@ msgstr "Bạn có muốn ghi đè không?\n"
 
 #: ../fslint-gui:460
 msgid "You can't overwrite "
-msgstr "Bạn không ghi đè được"
+msgstr "Không thể ghi đè "
 
 #: ../fslint-gui:493
 msgid "Files with the same content"
-msgstr ""
+msgstr "Tập tin cùng nội dung"
 
 #: ../fslint-gui:494
 msgid "Installed packages ordered by disk usage"
-msgstr ""
+msgstr "Gói đã cài đặt đã sắp xếp theo cách sử dụng đĩa"
 
 #: ../fslint-gui:495
 msgid "Problematic filenames"
-msgstr ""
+msgstr "Tên tập tin mơ hồ"
 
 #: ../fslint-gui:496
-#, fuzzy
 msgid "Possibly conflicting commands or filenames"
-msgstr "Tập tin không khớp"
+msgstr "Lệnh hay tên tập có thể xung đột với nhau"
 
 #: ../fslint-gui:497
 msgid "Possibly old temporary files"
-msgstr ""
+msgstr "Tập tin tạm có thể cũ"
 
 #: ../fslint-gui:498
 msgid "Problematic symbolic links"
-msgstr ""
+msgstr "Liên kết mềm mơ hồ"
 
 #: ../fslint-gui:499
 msgid "Files with missing user IDs"
-msgstr ""
+msgstr "Tập tin còn thiếu ID người dùng"
 
 #: ../fslint-gui:501
 msgid "Executables still containing debugging info"
-msgstr ""
+msgstr "Tập tin có khả năng thực hiện vẫn còn chứa thông tin gỡ lỗi"
 
 #: ../fslint-gui:502
 msgid "Erroneous whitespace in a text file"
-msgstr ""
+msgstr "Sai khoảng trắng trong tập tin văn bản"
 
 #: ../fslint-gui:508
 msgid "Invalid path ["
-msgstr ""
+msgstr "Đường dẫn không hợp lệ ["
 
 #: ../fslint-gui:549
 msgid "searching"
-msgstr ""
+msgstr "đang tìm kiếm"
 
 #: ../fslint-gui:559
 msgid "processing..."
-msgstr ""
+msgstr "đang xử lý..."
 
 #: ../fslint-gui:587
 msgid "No search paths specified"
-msgstr "Chưa ghi rõ đường dẫn tìm kiếm nào"
+msgstr "Chưa ghi rõ đường dẫn tìm kiếm"
 
 #: ../fslint-gui:746
-msgid ""
-"Sorry, FSlint does not support this functionality on your system at present."
-msgstr ""
+msgid "Sorry, FSlint does not support this functionality on your system at present."
+msgstr "Tiếc là phần mềm FSlint chưa hỗ trợ chức năng này trên hệ thống của bạn."
 
 #: ../fslint-gui:762
 msgid " packages, "
-msgstr ""
+msgstr " gói, "
 
 #: ../fslint-gui:763
 #, python-format
 msgid "consuming %sB. "
-msgstr ""
+msgstr "chiếm %sB. "
 
 #: ../fslint-gui:764
 #, python-format
 msgid "Note %s."
-msgstr ""
+msgstr "Ghi chú %s."
 
 #: ../fslint-gui:782 ../fslint-gui:823 ../fslint-gui:861 ../fslint-gui:923
 msgid " files"
@@ -446,96 +442,96 @@ msgstr "byte bị phí"
 
 #: ../fslint-gui:1039
 msgid "None selected"
-msgstr "Chưa có điều nào được chọn"
+msgstr "Chưa chọn gì"
 
 #: ../fslint-gui:1043
 msgid " this item?\n"
-msgstr " mục không?\n"
+msgstr " mục này không?\n"
 
 #: ../fslint-gui:1045
 #, python-format
 msgid " these %d items?\n"
-msgstr " %d mục không?\n"
+msgstr " những %d mục này không?\n"
 
 #: ../fslint-gui:1160
 msgid "User aborted"
-msgstr "Người dùng đã hủy bỏ việc"
+msgstr "Người dùng đã hủy bỏ"
 
 #: ../fslint-gui:1264
 msgid "Rename:"
-msgstr "Đổi tên:"
+msgstr "Thay tên:"
 
 #: ../fslint-gui:1275 ../fslint-gui:1316
 #, python-format
 msgid "Error: [%s] can not be represented on your file system"
-msgstr ""
+msgstr "Lỗi: [%s] không thể được đại diện trên hệ thống tập tin của bạn"
 
 #: ../fslint-gui:1285
 #, python-format
 msgid "Error: Can't rename [%(old_path)s] as [%(new_path)s] exists"
-msgstr ""
+msgstr "Lỗi: không thể thay đổi tên của [%(old_path)s] vì [%(new_path)s] đã tồn tại"
 
 #: ../fslint-gui:1305
 msgid "wildcard:"
-msgstr ""
+msgstr "ký tự đại diện:"
 
 #: ../fslint-gui:1400
 msgid "Sorry, you must be root to delete system packages."
-msgstr ""
+msgstr "Tiếc là bạn phải là người chủ (root) để xoá gói hệ thống."
 
 #: ../fslint-gui:1403
 msgid "Are you sure you want to delete"
-msgstr "Bạn chắc muốn xóa bỏ những"
+msgstr "Bạn có chắc muốn xóa những"
 
 #: ../fslint-gui:1416
 msgid "Calculating dependencies..."
-msgstr ""
+msgstr "Đang tính quan hệ phụ thuộc..."
 
 #: ../fslint-gui:1429
 #, python-format
 msgid "%d extra packages need to be deleted.\n"
-msgstr ""
+msgstr "%d gói thêm cần phải bị xoá.\n"
 
 #: ../fslint-gui:1430
 msgid "Please review the updated selection."
-msgstr ""
+msgstr "Hãy xem lại vùng chọn đã cập nhật."
 
 #: ../fslint-gui:1438
 msgid "Removing packages..."
-msgstr ""
+msgstr "Đang gỡ bỏ gói..."
 
 #: ../fslint-gui:1468
 msgid " items deleted"
-msgstr " mục bị xóa bỏ"
+msgstr " mục bị xóa"
 
 #: ../fslint-gui:1547
 msgid "Are you sure you want to merge ALL files?\n"
-msgstr "Bạn chắc muốn phối TẤT CẢ tập tin với nhau không?\n"
+msgstr "Bạn có chắc muốn trộn TẤT CẢ tập tin với nhau không?\n"
 
 #: ../fslint-gui:1551
 msgid "(Ignoring those selected)\n"
-msgstr "(Trừ những điều được chọn)\n"
+msgstr "(Bỏ qua cái đã chọn)\n"
 
 #: ../fslint-gui:1597
 msgid "Which indenting method do you want to convert to?"
-msgstr ""
+msgstr "Bạn có muốn chuyển đổi sang phương pháp thụt lề nào?"
 
 #: ../fslint-gui:1598
 msgid "Tabs"
-msgstr ""
+msgstr "Cột Tab"
 
 #: ../fslint-gui:1598
 msgid "Spaces"
-msgstr ""
+msgstr "Dấu cách"
 
 #: ../fslint-gui:1606
 msgid "Are you sure you want to clean"
-msgstr "Bạn chắc muốn gột những"
+msgstr "Bạn có chắc muốn gột"
 
 #: ../fslint-gui:1648
 msgid " items cleaned ("
-msgstr " mục được gột ("
+msgstr " mục đã gột ("
 
 #: ../fslint-gui:1649
 msgid " bytes saved)"
-msgstr " byte được giữ)"
+msgstr " byte đã tiết kiệm)"
