--- a/doc/NEWS
+++ b/doc/NEWS
@@ -7,6 +7,9 @@
 		  and spaces at the end of names of duplicate files.
 		* Remove brace expansion from debian/rules to allow package
 		  to build on debian systems where dash is the default shell.
+		* Fixed a bug reintroduced in 2.22 (GUI only) where duplicates
+		  with independent hardlinks were not reported correctly.
+		* Rename findup --sizes option to the more accurate --summary.
 
 2.22 28/06/07
 	* Translations:
